# dsa

./: .gitignore  Cargo.toml  README.md
scripts/: README.md  align.sh  compare.sh  random-commands.sh  setup-tests.sh  split-msa.sh
src/: align.rs  cli.rs  main.rs  mod.rs  tests_prelude.rs  types.rs
tests/scripts/: compare.sh  setup-tests.sh
