[package]
name = "dsa"
description = "Degenerate String Aligner (dsa)"
version = "0.0.1"
edition = "2021"
authors = ["Njagi Mwaniki <njagi+bio@njagi.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
clap = "3.1.6"
rand = "0.8.4"
chrono = "0.4"
rayon = "1.5.1"
coitrees = "0.2.1"
ndarray = "^0.15.4"
needletail = "0.4.1"
indicatif = "0.16.2"

fbox = { git = "https://github.com/urbanslug/fbox.git" }
eds = { git = "https://github.com/urbanslug/eds.git" }
dwflambda = { git = "https://github.com/urbanslug/dwflambda.git" }
ndarray-to-img = { git = "https://github.com/urbanslug/ndarray-to-img.git" }

[dev-dependencies]
pretty_assertions = "1.1.0"